--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </button>
   </div>
 
-  <div class="logo-font neon-glow text-3xl font-bold select-none">
+  <div class="logo-font neon-glow text-3xl font-bold select-none ml-8">
     DZULFIKAR
   </div>
 
