--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </button>
   </div>
 
-<div id="logo" class="logo-font neon-glow text-3xl font-bold select-none ml-24">
+<div id="logo" class="logo-font neon-glow text-1xxl font-bold select-none ml-20">
   DZULFiKAR
 </div>
 
