--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <style>
 .logo-font {
   font-family: "Nosifer", sans-serif;
-  color: #8B0000; /* warna merah darah */
-  text-shadow: none; /* hilangkan efek neon */
+  color: #FF1A1A; /* warna merah darah terang */
+  text-shadow: none;
   font-size: 5vw;
 }
 
