--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 <!-- Modal Login dan Register -->
 <div id="loginModal" class="fixed inset-0 hidden items-center justify-center bg-black bg-opacity-40 backdrop-blur-sm z-50">
-  <div class="bg-black bg-opacity-50 backdrop-blur-md border border-white/20 rounded-3xl p-8 w-full max-w-sm shadow-2xl text-white font-sans">
+  <div class="bg-black bg-opacity-30 backdrop-blur-lg border border-white/20 rounded-3xl p-8 w-full max-w-sm shadow-2xl text-white font-sans">
     <h2 id="modalTitle" class="text-3xl font-semibold mb-6 text-center">Login</h2>
 
     <form id="authForm" class="space-y-4">
